2005-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/grid.c: update the progress less frequently.

2005-08-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteview.c (gimp_palette_view_focus): when
	focussing the widget, select the palette's first entry if none is
	selected. Enables cursor navigation after tabbing in.

2005-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/deinterlace.c: fixed boundary conditions.

2005-08-16  Akkana Peck  <akkana@cvs.gnome.org>

	* plug-ins/script-fu/scripts/grid-system.scm: Rename "Grid" to
	"Divisions" to avoid confusion with the existing grid plug-in;
	move into Render->Pattern along with the other Grid plug-in.

2005-08-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteview.c (gimp_palette_view_focus): return
	FALSE on TAB_FORWARD and TAB_BACKWARD. Enables tabbing out of the
	widget.

2005-08-17  Michael Natterer  <mitch@gimp.org>

	* app/actions/layers-actions.c
	* app/actions/plug-in-actions.c
	* app/actions/image-actions.c: moved all color menu actions to
	image-actions.c because that's the place where we collect menu
	actions of menus that don't have its own foo-actions.c file.
	Renamed them all to "colors-foo-menu".

	* menus/image-menu.xml.in: changed accordingly.

2005-08-16  Akkana Peck  <akkana@cvs.gnome.org>

	* menus/image-menu.xml.in
	* app/actions/image-actions.c
	* app/actions/plug-in-actions.c
	* plug-ins/common/compose.c
	* plug-ins/common/decompose.c
	* plug-ins/common/vinvert.c: Remove erroneous extra *compose
	entries, and move *compose into a Components submenu (re IRC
	discussion); move Value Invert to near Invert (suggested by mitch)

2005-08-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.[ch]: added utility function
	gimp_container_view_install_properties() to reduce code duplication
	in classes implementing this interface.

	* app/widgets/gimpcontainerbox.c
	* app/widgets/gimpcontainercombobox.c